# ag2-poc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py
src/agents/: captain.py
src/db/: connection.py  test_connection.py
src/rag/: assistant.py  knowledge_base.py  prompts.py
tests/agents/: test_captain.py
tests/db/: __init__.py  test_db_connection.py  test_knowledge_lookup.py  test_vector_search.py
tests/rag/: test_assistant.py
